syntax = "proto3";

option csharp_namespace = "GrpcMessage";


message MessageRequest {
	string id = 1;
	string type = 2;
}

message MessageResponse {
}


service MessageSplitter {
	rpc RequestMessage (MessageRequest) returns (MessageResponse);
}